DevOrg/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Test Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Won</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Actual_Decision_Date__c</fullName>
        <label>Actual Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Associated_Relationship_Name__c</fullName>
        <formula>Relationship__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Associated Relationship Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cylinder_Volume__c</fullName>
        <formula>CEILING(3.14159  * Radius__c * Radius__c * Height__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cylinder Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Given__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discount Given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <label>Discount Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Decision_Date__c</fullName>
        <label>Expected Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchandise__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchandise</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <value>111</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Merchandise__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annuities</fullName>
                </value>
                <value>
                    <fullName>Brokerage</fullName>
                </value>
                <value>
                    <fullName>Deposit</fullName>
                </value>
                <value>
                    <fullName>Institutional</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Investment Management</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Service__c</fullName>
        <label>Product/Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>529 Plans</fullName>
                </value>
                <value>
                    <fullName>Addition to Existing Acct</fullName>
                </value>
                <value>
                    <fullName>Addition to Existing IIS Account</fullName>
                </value>
                <value>
                    <fullName>AMC</fullName>
                </value>
                <value>
                    <fullName>Annuities</fullName>
                </value>
                <value>
                    <fullName>Brokerage</fullName>
                </value>
                <value>
                    <fullName>Business Valuation</fullName>
                </value>
                <value>
                    <fullName>Capital Markets</fullName>
                </value>
                <value>
                    <fullName>Capital Markets-Arrang. Fee</fullName>
                </value>
                <value>
                    <fullName>Capital Markets-Derivatives</fullName>
                </value>
                <value>
                    <fullName>Capital Markets-For. Exch.</fullName>
                </value>
                <value>
                    <fullName>Capital Markets-M&amp;A</fullName>
                </value>
                <value>
                    <fullName>Cash Management</fullName>
                </value>
                <value>
                    <fullName>Cash Manager - Legal</fullName>
                </value>
                <value>
                    <fullName>Cash Manager - Medical</fullName>
                </value>
                <value>
                    <fullName>CD/LSG Promo</fullName>
                </value>
                <value>
                    <fullName>Charitable Lead Trust</fullName>
                </value>
                <value>
                    <fullName>Charitable Remainder Trust</fullName>
                </value>
                <value>
                    <fullName>Commercial Line of Credit</fullName>
                </value>
                <value>
                    <fullName>Commercial Loan</fullName>
                </value>
                <value>
                    <fullName>Consumer Line of Credit</fullName>
                </value>
                <value>
                    <fullName>Consumer Loan</fullName>
                </value>
                <value>
                    <fullName>Credit Card – Business</fullName>
                </value>
                <value>
                    <fullName>Credit Card – Corporate</fullName>
                </value>
                <value>
                    <fullName>Credit Card – Purchasing</fullName>
                </value>
                <value>
                    <fullName>Custody</fullName>
                </value>
                <value>
                    <fullName>Custody Service</fullName>
                </value>
                <value>
                    <fullName>Defined Benefit Plan</fullName>
                </value>
                <value>
                    <fullName>Delaware Trust</fullName>
                </value>
                <value>
                    <fullName>Deposits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Radius__c</fullName>
        <label>Radius</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <referenceTo>Relationship__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size/Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Test_Opp_Record_Type</fullName>
        <active>true</active>
        <businessProcess>Test Sales Process</businessProcess>
        <label>Test Opp Record Type</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Close_Date_Alert</fullName>
        <active>false</active>
        <description>requires an opportunity to have a CloseDate of today or any future date</description>
        <errorConditionFormula>AND(NOT(IsClosed), CloseDate &lt; TODAY())</errorConditionFormula>
        <errorMessage>Hey McFly, unless you are planning to go back in time, please update your close date</errorMessage>
    </validationRules>
</CustomObject>